--- a/01_Programacion_basica_y_Ramp_Up/Sprint_01/Unidad_01_Introduccion_Herramientas/01_Markdown_en_Jupyter_I_alumno.ipynb
+++ b/01_Programacion_basica_y_Ramp_Up/Sprint_01/Unidad_01_Introduccion_Herramientas/01_Markdown_en_Jupyter_I_alumno.ipynb
@@ -35,6 +35,8 @@
     "## 1. Primera celda\n",
     "Haz doble clik en esta celda y verás cómo cambia el texto. Significa que estás en el **modo edición** de Markdown.\n",
     "\n",
+    "Hola\n",
+    "\n",
     "Haz ctrl + enter para ejecuta la celda (o botón de play de arriba). Así abandonamos el modo edición y nuestro texto obtiene el formato que deseábamos.\n",
     "\n",
     "**¡Tu turno!** Crea una celda nueva en el menu de arriba y selecciona la opción Markdown. Y luego intenta replicar la celda siguiente a la de la imagen"
@@ -45,6 +47,13 @@
    "metadata": {},
    "source": [
     "![imagen](./img/crea_celda.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mis primeros pasos con markdown"
    ]
   },
   {
@@ -84,7 +93,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Cabecera1 \n",
+    "## Cabecera 2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,11 +106,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "###### Cabecera 6\n",
+    "##### Cabecera 5\n",
+    "#### Cabecera 4\n",
+    "### Cabecera 3\n",
+    "## Cabecera 2\n",
+    "# Cabecera 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,7 +128,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<h1> Header 1</h1>\n",
+    "<h2> Header 2</h2>\n",
+    "<h3> Header 3</h3>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -124,7 +145,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Texto en negrita**\n",
+    "\n",
+    "*Texto en cursiva*\n",
+    "\n",
+    "***Texto en negrita y cursiva***"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,6 +171,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    ">Recuerda la importancia del conocimiento del negocio y del dominio\n",
+    ">>Y utilizar atajos del teclado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -163,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
