--- a/01_Programacion_basica_y_Ramp_Up/Sprint_02/Unidad_01_Python_Basic_II__Colecciones_y_Funciones/Sets.ipynb
+++ b/01_Programacion_basica_y_Ramp_Up/Sprint_02/Unidad_01_Python_Basic_II__Colecciones_y_Funciones/Sets.ipynb
@@ -158,14 +158,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{32, 100, 10, 45, 15, 23}\n",
       "[32, 100, 10, 45, 15, 23]\n"
      ]
     }
@@ -173,9 +172,12 @@
    "source": [
     "lista_con = [100, 10, 23, 23, 15, 32, 45, 10, 100, 23] #para quitar elementos duplicados, primero pasamos a set y luego a lista otra vez\n",
     "\n",
-    "print(set(lista_con))\n",
+    "#print(set(lista_con))\n",
     "\n",
-    "print(list(set(lista_con)))"
+    "#print(list(set(lista_con)))\n",
+    "\n",
+    "lista_con = list(set(lista_con))\n",
+    "print(lista_con)"
    ]
   },
   {
