--- a/01_Programacion_basica_y_Ramp_Up/Sprint_02/Unidad_01_Python_Basic_II__Colecciones_y_Funciones/Funciones_de_usuario_I.ipynb
+++ b/01_Programacion_basica_y_Ramp_Up/Sprint_02/Unidad_01_Python_Basic_II__Colecciones_y_Funciones/Funciones_de_usuario_I.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,14 +209,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<built-in method time of datetime.datetime object at 0x1056d0f90>\n"
+      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'que_hora_es' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mque_hora_es\u001b[49m())\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'que_hora_es' is not defined"
      ]
     }
    ],
@@ -226,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<built-in method time of datetime.datetime object at 0x1056f8ae0>\n"
+      "<built-in method time of datetime.datetime object at 0x1077e2c10>\n"
      ]
     }
    ],
