--- a/01_Programacion_basica_y_Ramp_Up/Sprint_02/Unidad_01_Python_Basic_II__Colecciones_y_Funciones/Funciones_de_usuario_I.ipynb
+++ b/01_Programacion_basica_y_Ramp_Up/Sprint_02/Unidad_01_Python_Basic_II__Colecciones_y_Funciones/Funciones_de_usuario_I.ipynb
@@ -196,27 +196,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "def que_hora_es():\n",
-    "    now = datetime.now().time\n",
+    "    now = datetime.now().time()\n",
     "    return now\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<built-in method time of datetime.datetime object at 0x1078280c0>\n"
+      "13:41:02.593773\n"
      ]
     }
    ],
